<resources>
    <string name="app_name">Eddie Bull Cupcakes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcomeDescription">Welcome to The Eddie Bull Cupcakes App where you will find most delicious cupcakes</string>
    <string name="phoneButton">Give us a call</string>
    <string name="locationButton">View on map</string>
    <string name="aboutUs">Our company Eddie-Bull Cupcakes has been around since late 2016. We specialize in strictly cupcakes, and currently have over 10 different cupcakes. Our signature being the Triple-Choco, which is our favourite as well! We just opened our first store in the cafeteria in St. Clair College. Stop buy a recieve a 10% student discount with a valid student card!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cupsText">cup(s)</string>
    <string name="milkText">Milk</string>
    <string name="vanillaExtractText">Vanilla Extract</string>
    <string name="eggsText">Eggs</string>
    <string name="vegetableOilText">Vegetable Oil</string>
    <string name="cocoaText">Cocoa</string>
    <string name="sugarText">Sugar</string>
    <string name="saltText">Salt</string>
    <string name="bakingSodaText">Baking Soda</string>
    <string name="bakingPowderText">Baking Powder</string>
    <string name="flourText">Flour</string>
    <string name="ingredientsTitle">Ingredients Calculator</string>
    <string name="tspnsText">tspn(s)</string>
<<<<<<< HEAD
    <string name="aboutUsTitle">About Us</string>
    <string name="callUsButton">Call Us Now</string>
    <string name="seeOnMapButton">See Us On The Map</string>
    <string name="pricingCalculatorTitle">Pricing Calculator</string>
    <string name="rainbowSprinkleTitle">Rainbow Sprinkle    x</string>
    <string name="tripleChocoTitle">Triple Choco            x</string>
    <string name="pumpkinSpiceTitle">Pumpkin Spice        x</string>
    <string name="peanutButterCupTitle">Peanut Butter Cup  x</string>
    <string name="funfettiExplosionTitle">Funfetti Explosion  x</string>
    <string name="totalTextView">Total              =</string>
=======
    <string name="contactUs">Contact Us</string>
>>>>>>> 9695420e034e906489e55bd2c0b591376f561716
</resources>
