<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.liamgoodwin.eddiebullcupcakes.MainFragment"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/backgroundColour"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleImageView"
        android:src="@drawable/title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:src="@drawable/cupcakeimg"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcomeDescription"
        android:id="@+id/welcomeTextView"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneButton"
        android:id="@+id/callUsMainButton"
        android:background="@color/buttonColour"
        android:layout_marginBottom="10dp"
        android:textColor="@color/buttonTextColour" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationButton"
        android:id="@+id/locationMainButton"
        android:background="@color/buttonColour"
        android:layout_marginBottom="10dp"
        android:textColor="@color/buttonTextColour" />

</LinearLayout>