<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liamgoodwin.eddiebullcupcakes.CupcakeCalculatorFragment"
    android:background="@color/backgroundColour">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pricingCalculatorTitle"
        android:id="@+id/aboutUsTitle"
        android:textAlignment="center"
        android:textColor="@color/buttonColour"
        android:textSize="30dp"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rainbowSprinkleTitle"
        android:id="@+id/rainbowSprinkleTitle"
        android:textColor="@color/buttonColour"
        android:layout_below="@+id/aboutUsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="viewEnd"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tripleChocoTitle"
        android:id="@+id/tripleChocoTitle"
        android:textColor="@color/buttonColour"
        android:layout_below="@+id/rainbowSprinkleTitle"
        android:layout_alignParentLeft="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="viewEnd"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pumpkinSpiceTitle"
        android:id="@+id/pumpkinSpiceTitle"
        android:textColor="@color/buttonColour"
        android:layout_below="@+id/tripleChocoTitle"
        android:layout_alignParentLeft="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="viewEnd"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/peanutButterCupTitle"
        android:id="@+id/peanutButterCupTitle"
        android:textColor="@color/buttonColour"
        android:layout_below="@+id/pumpkinSpiceTitle"
        android:layout_alignParentLeft="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="viewEnd"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/funfettiExplosionTitle"
        android:id="@+id/funfettiExplosionTitle"
        android:textColor="@color/buttonColour"
        android:layout_below="@+id/peanutButterCupTitle"
        android:layout_alignParentLeft="true"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="viewEnd"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rainbowSprinkleEditText"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:text="1"
        android:layout_alignTop="@+id/rainbowSprinkleTitle"
        android:layout_toRightOf="@+id/peanutButterCupTitle"
        android:layout_toEndOf="@+id/peanutButterCupTitle"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tripleChocoEditText"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:text="1"
        android:layout_below="@+id/rainbowSprinkleEditText"
        android:layout_toRightOf="@+id/peanutButterCupTitle"
        android:layout_marginLeft="23dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pumpkinSpiceEditText"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:text="1"
        android:layout_below="@+id/tripleChocoEditText"
        android:layout_toRightOf="@+id/peanutButterCupTitle"
        android:layout_marginLeft="23dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/peanutButterCupEditText"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:text="1"
        android:layout_below="@+id/pumpkinSpiceEditText"
        android:layout_toRightOf="@+id/peanutButterCupTitle"
        android:layout_marginLeft="23dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/funfettiExplosionEditText"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:text="1"
        android:layout_below="@+id/peanutButterCupEditText"
        android:layout_toRightOf="@+id/peanutButterCupTitle"
        android:layout_marginLeft="23dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="= $44.45"
        android:id="@+id/rainbowSprinkleTotal"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/rainbowSprinkleEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="= $44.45"
        android:id="@+id/tripleChocoTotal"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/rainbowSprinkleTotal"
        android:layout_alignParentRight="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="= $44.45"
        android:id="@+id/pumpkinSpiceTotal"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/tripleChocoTotal"
        android:layout_alignParentRight="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="= $44.45"
        android:id="@+id/peanutButterCupTotal"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/pumpkinSpiceTotal"
        android:layout_alignParentRight="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/funfettiExplosionTotal"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/peanutButterCupTotal"
        android:layout_alignParentRight="true"
        android:text="= $44.45"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/totalTextView"
        android:id="@+id/totalTextView"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:textSize="25dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_alignTop="@+id/amountTextView"
        android:layout_alignRight="@+id/rainbowSprinkleTitle"
        android:layout_alignEnd="@+id/rainbowSprinkleTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$100.00"
        android:id="@+id/amountTextView"
        android:textColor="@color/buttonColour"
        android:textAlignment="center"
        android:textSize="25dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/funfettiExplosionEditText"
        android:layout_alignLeft="@+id/rainbowSprinkleEditText"
        android:layout_alignStart="@+id/rainbowSprinkleEditText"
        android:layout_marginTop="55dp" />
</RelativeLayout>
